
### Changed

- **Optimizer Setup**: Modified `setup_optimizer()` to implement custom warmup + cosine decay schedule instead of cosine-only schedule.
- **Lambda Weight Documentation**: Updated help text for `--lambda-weight` to include recommended range (0.3-0.8) and note about stability.

### Fixed

- **Loss Explosion at Step 50-60**: Fixed critical issue where training loss would spike dramatically around step 50-60 due to missing warmup implementation. The optimizer was starting at full learning rate (5e-5) immediately, causing gradient instability when combined with large distrust loss values.
- **Gradient Accumulation**: Gradient norms are now properly monitored and warnings displayed when clipping is triggered excessively.

### Documentation

- Added "Troubleshooting Loss Explosions" section to `TRAINING_GUIDE.md` with symptoms, causes, and solutions.
- Updated `QUICK_START.md` with v1.4 stability improvements and new warning signs.
- Documented new CLI arguments and their recommended usage patterns.

## [0.2.4] - 2025-12-05

Model-tiered hardware profiles for optimal resource utilization across all model sizes.

### Added

- **Model-Tiered Hardware Profiles**: Hardware profiles now contain a `model_tiers` section with optimized settings (LoRA rank, layers, batch size) for each model size category (small/7B, medium/14B, large/32B, xlarge/70B+). This ensures the same hardware profile works correctly for any supported model size.
- **Automatic Tier Selection**: `scale_profile_for_model()` automatically detects model size and applies the appropriate tier settings from the profile.

### Changed

- **Hardware Profile YAML Format**: All hardware profiles (`ultra_96gb.yaml`, `ultra_192gb.yaml`, `max_64gb.yaml`, `pro_32gb.yaml`, `base_16gb.yaml`) updated with `model_tiers` section containing tier-specific LoRA and batch settings.